gcc/testsuite/rust/rustc/ui/pattern/issue-68394-let-pat-runtime-value.rs
fn main() {
    let x = 255u8;
    let 0u8..=x = 0;
// { dg-error ".E0080." "" { target *-*-* } .-1 }
}

